Bug 352650 - Random white area in screen lock settings
Summary: Random white area in screen lock settings
Status: RESOLVED FIXED
Alias: None
Product: kscreenlocker
Classification: Unmaintained
Component: kcm (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 355589 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-09-13 10:02 UTC by kdebuac.rhn
Modified: 2016-03-08 23:31 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.6.0
Sentry Crash Report:


Attachments
Screenshot of the area (48.42 KB, image/png)
2015-09-13 10:03 UTC, kdebuac.rhn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description kdebuac.rhn 2015-09-13 10:02:59 UTC
The screen lock settings has a hardcoded large white area that looks ugly and can be irritating in low light conditions.

Reproducible: Always

Steps to Reproduce:
1. Change to a dark theme.
2. Go to workspaces->screen locking

Actual Results:  
Unsightly white area in the bottom part

Expected Results:  
Bottom part fits in with the rest

Fedora 22
Comment 1 kdebuac.rhn 2015-09-13 10:03:26 UTC
Created attachment 94531 [details]
Screenshot of the area
Comment 2 Kai Uwe Broulik 2016-03-08 10:24:14 UTC
There's a QQuickView below the configs, probably for choosing themes? But it's empty for me.
Comment 3 Martin Flöser 2016-03-08 14:34:09 UTC
Git commit 47d3969ef306d30ecb4e377c283d9f7df7e2d8a0 by Martin Gräßlin.
Committed on 08/03/2016 at 13:07.
Pushed by graesslin into branch 'Plasma/5.6'.

[kcm] Remove QQuickView for themes

The feature for theme selection in lock screen never got implemented.
It doesn't list any themes by default and is causing bugs. So better
remove it. Lock screen uses look and feel packages by default, so it
is themeable.
FIXED-IN: 5.6.0

Reviewers: #plasma

Subscribers: plasma-devel

Projects: #plasma

Differential Revision: https://phabricator.kde.org/D1082

M  +0    -3    kcm/CMakeLists.txt
M  +0    -87   kcm/kcm.cpp
M  +0    -15   kcm/kcm.h
M  +15   -2    kcm/kcm.ui
D  +0    -173  kcm/package/contents/ui/main.qml
D  +0    -82   kcm/package/metadata.desktop

http://commits.kde.org/kscreenlocker/47d3969ef306d30ecb4e377c283d9f7df7e2d8a0
Comment 4 Wolfgang Bauer 2016-03-08 23:31:47 UTC
*** Bug 355589 has been marked as a duplicate of this bug. ***