[kcm] Remove QQuickView for themes

The feature for theme selection in lock screen never got implemented.
It doesn't list any themes by default and is causing bugs. So better
remove it. Lock screen uses look and feel packages by default, so it
is themeable.

BUG: 352650
FIXED-IN: 5.6.0

Reviewers: #plasma

Subscribers: plasma-devel

Projects: #plasma

Differential Revision: https://phabricator.kde.org/D1082